kubernetes/applications/superset/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: superset
  labels:
    app.kubernetes.io/name: superset
    app.kubernetes.io/component: business-intelligence
